--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+  <dependency>
+    <groupId>com.formdev</groupId>
+    <artifactId>flatlaf</artifactId>
+    <version>2.0.1</version>
+  </dependency>
   </dependencies>
 </project>
